--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/brands.min.css" integrity="sha512-EJp8vMVhYl7tBFE2rgNGb//drnr1+6XKMvTyamMS34YwOEFohhWkGq13tPWnK0FbjSS6D8YoA3n3bZmb3KiUYA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.5.1/mapbox-gl.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/@icon/maki-icons/maki-icons.css">
     <title>Lede grid overview</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Lede Grid Overview</title>
+    <style>
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%; /* Ensure body takes the full height of the viewport */
+        }
+        #map {
+            width: 100vw; /* Full viewport width */
+            height: 100vh; /* Full viewport height */
+        }
+    </style>
 </head>
 <body>
-<div class="container my-3">
-    <h1 class="display-4 text-center">
-        <i class="fas fa-amp-marked mr-4"></i>Lede Grid
-    </h1>
-    <div
-            id="map"
-            style="width: 100%; height: 1000px; border-bottom-left-radius: 5px; border-bottom-right-radius: 5px;"
-    ></div>
-</div>
+<div id="map"></div>
 <script src="/config.js"></script>
 <script src="js/map.js"></script>
 </body>
